fixed alignment of icon on profile page. Fixed person icon.

--- a/src/msite/css/branding.css
+++ b/src/msite/css/branding.css
@@ -650,6 +650,10 @@ div.layout-header .menu-active {
   left: -6px;
 }
 
+.my-profile-item-icon .person {
+	display: none;
+}
+
 .detail-header {
   width: 100%;
   padding: 0px;
